{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 191,
  "lineage": "0a9f8b55-1ccb-6e2a-b874-a2e6007c8ba6",
  "resources": [
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-049b0eb3c48e9b0e3",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0fff9ace926ee0cd8",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0fff9ace926ee0cd8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-09ea1f3249269e7e6",
            "private_dns": "ip-10-0-3-179.eu-west-1.compute.internal",
            "private_ip": "10.0.3.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03ce933d8ebfa8824",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e9c104d52ef933f",
            "tags": {
              "Name": "Eng-47-Final-Project-db"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0864784b4067c982a"
            ]
          },
          "dependencies": [
            "aws_vpc.app",
            "module.app.aws_security_group.app",
            "module.db.aws_security_group.db",
            "module.db.aws_subnet.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0a1c9e53e14c0be26",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng-47-Final-Project"
            },
            "vpc_id": "vpc-07f003d459cae5eec"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:loadbalancer/app/Final-Project-LB/d48ced8d27e4edf0",
            "arn_suffix": "app/Final-Project-LB/d48ced8d27e4edf0",
            "dns_name": "Final-Project-LB-1204138565.eu-west-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:loadbalancer/app/Final-Project-LB/d48ced8d27e4edf0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Final-Project-LB",
            "security_groups": [
              "sg-0617866d93ecc7ee3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-098a5e179b7449f28"
              },
              {
                "subnet_id": "subnet-0e70058063c27d2b7"
              },
              {
                "subnet_id": "subnet-0e8e09c8edbed538f"
              }
            ],
            "subnets": [
              "subnet-098a5e179b7449f28",
              "subnet-0e70058063c27d2b7",
              "subnet-0e8e09c8edbed538f"
            ],
            "tags": {
              "Name": "Eng47-Project-Final-LB"
            },
            "vpc_id": "vpc-07f003d459cae5eec",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_vpc.app",
            "module.app.aws_security_group.app",
            "module.app.aws_subnet.app",
            "module.app.aws_subnet.app1",
            "module.app.aws_subnet.app2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Eng47-listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:listener/app/Final-Project-LB/d48ced8d27e4edf0/0d5f273cc9230857",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:targetgroup/Eng47-FinalProject-TG/f2823e0afa6be95e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:listener/app/Final-Project-LB/d48ced8d27e4edf0/0d5f273cc9230857",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:loadbalancer/app/Final-Project-LB/d48ced8d27e4edf0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_target_group.app_TG",
            "aws_vpc.app",
            "module.app.aws_security_group.app",
            "module.app.aws_subnet.app",
            "module.app.aws_subnet.app1",
            "module.app.aws_subnet.app2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_TG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:targetgroup/Eng47-FinalProject-TG/f2823e0afa6be95e",
            "arn_suffix": "targetgroup/Eng47-FinalProject-TG/f2823e0afa6be95e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:targetgroup/Eng47-FinalProject-TG/f2823e0afa6be95e",
            "lambda_multi_value_headers_enabled": false,
            "name": "Eng47-FinalProject-TG",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07f003d459cae5eec"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-0bec4379fa3155c4d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-098a5e179b7449f28",
              "subnet-0e70058063c27d2b7",
              "subnet-0e8e09c8edbed538f"
            ],
            "tags": {
              "Name": "Eng-47-Final-Project"
            },
            "vpc_id": "vpc-07f003d459cae5eec"
          },
          "dependencies": [
            "aws_vpc.app",
            "module.app.aws_subnet.app",
            "module.app.aws_subnet.app1",
            "module.app.aws_subnet.app2"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              }
            ],
            "id": "acl-00b3be5c78ac992c6",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 27017,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 27017
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-07e9c104d52ef933f"
            ],
            "tags": {
              "Name": "Eng-47-Final-Project-db"
            },
            "vpc_id": "vpc-07f003d459cae5eec"
          },
          "dependencies": [
            "aws_vpc.app",
            "module.app.aws_subnet.app",
            "module.db.aws_subnet.db"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0634f70618ae3017a",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a1c9e53e14c0be26",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Eng-47-Final-Project-public"
            },
            "vpc_id": "vpc-07f003d459cae5eec"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0821d9af41ad3da05",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Eng-47-Final-Project-db-private"
            },
            "vpc_id": "vpc-07f003d459cae5eec"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ebe0f9c661291c5",
            "route_table_id": "rtb-0634f70618ae3017a",
            "subnet_id": "subnet-098a5e179b7449f28"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_vpc.app",
            "module.app.aws_route_table.app",
            "module.app.aws_subnet.app"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0809f554e2fb53bd5",
            "route_table_id": "rtb-0634f70618ae3017a",
            "subnet_id": "subnet-0e70058063c27d2b7"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_vpc.app",
            "module.app.aws_route_table.app",
            "module.app.aws_subnet.app1"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0896a5bdc1a555c54",
            "route_table_id": "rtb-0634f70618ae3017a",
            "subnet_id": "subnet-0e8e09c8edbed538f"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_vpc.app",
            "module.app.aws_route_table.app",
            "module.app.aws_subnet.app2"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d59b82432405d381",
            "route_table_id": "rtb-0821d9af41ad3da05",
            "subnet_id": "subnet-07e9c104d52ef933f"
          },
          "dependencies": [
            "aws_vpc.app",
            "module.db.aws_route_table.db",
            "module.db.aws_subnet.db"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0617866d93ecc7ee3",
            "description": "Eng-47-Final-Project access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0617866d93ecc7ee3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Eng-47-Final-Project",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Eng-47-Final-Project"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f003d459cae5eec"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0864784b4067c982a",
            "description": "Eng-47-Final-Project db access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0864784b4067c982a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0617866d93ecc7ee3"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "Eng-47-Final-Project-db",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Eng-47-Final-Project-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f003d459cae5eec"
          },
          "dependencies": [
            "aws_vpc.app",
            "module.app.aws_security_group.app"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-098a5e179b7449f28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-098a5e179b7449f28",
            "map_public_ip_on_launch": true,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng-47-Final-Project"
            },
            "vpc_id": "vpc-07f003d459cae5eec"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0e70058063c27d2b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e70058063c27d2b7",
            "map_public_ip_on_launch": true,
            "owner_id": "135928476890",
            "tags": {
              "Name": "app-FP1"
            },
            "vpc_id": "vpc-07f003d459cae5eec"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0e8e09c8edbed538f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0e8e09c8edbed538f",
            "map_public_ip_on_launch": true,
            "owner_id": "135928476890",
            "tags": {
              "Name": "app-FP2"
            },
            "vpc_id": "vpc-07f003d459cae5eec"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-07e9c104d52ef933f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-07e9c104d52ef933f",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng-47-Final-Project-db"
            },
            "vpc_id": "vpc-07f003d459cae5eec"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-07f003d459cae5eec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04e2d68207794c5dc",
            "default_route_table_id": "rtb-037fec7ed43cfb6d6",
            "default_security_group_id": "sg-0a8e25fa6559e9c39",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07f003d459cae5eec",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-037fec7ed43cfb6d6",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng-47-Final-Project"
            }
          }
        }
      ]
    }
  ]
}